--- a/helm-chart-files/jorge-nava-wordpress-helmchart/templates/secrets.yaml
+++ b/helm-chart-files/jorge-nava-wordpress-helmchart/templates/secrets.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  password: WU9VUl9QQVNTV09SRA==
+  password:  {{ .Values.password | b64enc }}
 kind: Secret
 metadata:
   creationTimestamp: null
